--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "dev": "node log.js dev & vite --config vite/config.dev.mjs",
         "build": "node log.js build & vite build --config vite/config.prod.mjs",
         "dev-nolog": "vite --config vite/config.dev.mjs",
-        "build-nolog": "vite build --config vite/config.prod.mjs"
+        "build-nolog": "vite build --config vite/config.prod.mjs",
+        "dev:4000": "node log.js dev & vite --config vite/config.dev.mjs --port 4000"
     },
     "dependencies": {
         "phaser": "^3.90.0",
