--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,46 +3,62 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # 移除 pull_request 触发器，只在推送到 main 分支时部署
+  workflow_dispatch: # 允许手动触发部署
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     permissions:
       contents: read
       pages: write
       id-token: write
-    
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20' # 使用更新的 Node.js 版本
         cache: 'npm'
-        
+
     - name: Install dependencies
       run: npm ci
-      
+
+    - name: Verify data files exist
+      run: |
+        echo "检查数据文件是否存在..."
+        ls -la public/assets/data/
+        echo "levels.json 内容预览:"
+        head -20 public/assets/data/levels.json
+
     - name: Build
       run: npm run build-nolog
-      
+
+    - name: Verify build output
+      run: |
+        echo "检查构建输出..."
+        ls -la dist/
+        ls -la dist/assets/
+        ls -la dist/assets/data/
+        echo "构建后的 levels.json 文件存在:"
+        ls -la dist/assets/data/levels.json
+
     - name: Setup Pages
       uses: actions/configure-pages@v4
-      
+
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: './dist'
-        
+
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v4 
+      uses: actions/deploy-pages@v4
